2: Fixed twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/micael
+    url: https://twitter.com/micaelcarlstedt
   - title: bitbucket 
     url: http://bitbucket.org/micael
   - title: github
