--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,6 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
+  primary: 245ab3
+  primary-opacity: 0.73372779
   secondary: fec503   
   secondary-dark: 333
   muted: 777
