2: Changed the secondary color to the blue

--- a/_data/template.yml
+++ b/_data/template.yml
@@ -2,7 +2,7 @@
 color:
   primary: 245ab3
   primary-opacity: 0.73372779
-  secondary: fec503   
+  secondary: 245ab3   
   secondary-dark: 333
   muted: 777
 
